# ai-terminal-inspect

./: Cargo.toml  LICENSE  README.en.md  README.md  README.zh-CN.md  install.sh
.github/workflows/: release.yml
src/: cli.rs  command_parse.rs  config.rs  config_command.rs  display.rs  execute.rs  llm.rs  main.rs
