[package]
name = "ai-terminal-inspect"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/kibuniverse/ai-terminal-inspect"

[dependencies]
crossterm = "0.29.0"
directories = "6.0"
envy = "0.4.2"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
termimad = "0.34.1"
tokio = { version = "1.52.1", features = ["full"] }
toml = "0.8"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
